--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,16 +21,15 @@ section{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 2px solid white;
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 20px;
     gap: 30px;
     background-color: rgba(60, 60, 60, 0.482);
-    box-shadow: 2px 2px 10px white;
+    box-shadow: 2px 2px 10px rgb(0, 0, 0);
 }
 .display_handler{
     height: 150px;
     background-color: black;
-    border: 2px solid rgb(92, 92, 92);
     border-radius: 20px;
     width: 100%;
     display: flex;
@@ -45,11 +44,12 @@ input:focus{
     height: 50px;
     border-radius: 15px;
     border: none;
+    font-family:Arial, Helvetica, sans-serif;
     background-color: black;
     color: white;
     text-align: right;
     padding: 10px;
-    font-size: 20px;
+    font-size: 30px;
 }
 .output_box{
     height: 50px;
@@ -57,9 +57,10 @@ input:focus{
     border: none;
     background-color: black;
     color: white;
+    font-family:Arial, Helvetica, sans-serif;
     text-align: right;
     padding: 10px;
-    font-size: 20px;
+    font-size: 40px;
 }
 
 
@@ -99,6 +100,16 @@ input:focus{
     border-radius: 50%;
     border: none;
     background-color: green;
+    color: white;
+    font-size: 25px;
+    cursor: pointer;
+}
+.clear{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: none;
+    background-color: red;
     color: white;
     font-size: 25px;
     cursor: pointer;
