--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,8 +14,8 @@ section{
 }
 
 .container{
-    height: 500px;
-    width: 300px;
+    height: auto;
+    width: auto;
     display: flex;
     padding: 20px;
     justify-content: center;
@@ -26,6 +26,7 @@ section{
     gap: 30px;
     background-color: rgba(60, 60, 60, 0.482);
     box-shadow: 2px 2px 10px rgb(0, 0, 0);
+
 }
 .display_handler{
     height: 150px;
@@ -42,6 +43,7 @@ input:focus{
 }
 .input_box{
     height: 50px;
+
     border-radius: 15px;
     border: none;
     font-family:Arial, Helvetica, sans-serif;
@@ -71,6 +73,11 @@ input:focus{
     gap: 20px;
 }
 
+button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .num{
     width: 50px;
     height: 50px;
@@ -113,4 +120,11 @@ input:focus{
     color: white;
     font-size: 25px;
     cursor: pointer;
+}
+
+
+.back{
+    height: 30px;
+    width: auto;
+    
 }
